--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,76 +7,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %} {% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
     <style>
-        /* Navbar styles */
-        * {
-            padding: 0;
-            margin: 0;
-            background-color: #00040f;
-        }
-
-        .navbar {
-            background-color: #000000;
-            overflow: hidden;
-        }
-
-        .navbar a {
-            float: left;
-            display: block;
-            color: #fff;
-            text-align: center;
-            padding: 14px 20px;
-            text-decoration: none;
-            font-size: 17px;
-        }
-
-        .navbar a:hover {
-            background-color: #ddd;
-            color: #000;
-        }
-
-        /* Responsive navigation menu */
-        .navbar a.icon {
-            display: none;
-        }
-
-        @media screen and (max-width: 600px) {
-            .navbar a:not(:first-child) {
-                display: none;
-            }
-
-            .navbar a.icon {
-                float: right;
-                display: block;
-            }
-        }
-
-        @media screen and (max-width: 600px) {
-            .navbar.responsive {
-                position: relative;
-            }
-
-            .navbar.responsive .icon {
-                position: absolute;
-                right: 0;
-                top: 0;
-            }
-
-            .navbar.responsive a {
-                float: none;
-                display: block;
-                text-align: left;
-            }
-        }
-
-        .glassy-background {
-            background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url('background-image.jpg');
-            background-size: cover;
-            backdrop-filter: blur(10px);
-            /* Adjust blur strength as needed */
-            font-family: Arial, sans-serif;
-        }
     </style>
     <!-- ---------------------------- CSS BLOCK ----------------------------- -->
     {% block css %} {% endblock %}
@@ -85,14 +20,16 @@
 
     <!-- Navbar -->
     <div class="navbar  " id="navbar">
-        <a href="#"><h1>LOGO</h1></a>
+        <a href="#"><img width="80rem" src="{% static 'images/finvizer.svg' %}" alt=""></a>
         <a href="#" class="active">Home</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Contact</a>
+        <a href="#">FinCalc</a>
+        <a href="#">DebtManager</a>
+        <a href="#">Saving Sprint</a>
         <a href="javascript:void(0);" class="icon" onclick="toggleNavbar()">
             &#9776;
         </a>
+        <a class="anchor-btn" href="#">Login</a>
+        <a class="anchor-btn" href="#">Get Started</a>
     </div>
 
     <!-- Content -->
