--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,17 +6,24 @@
     padding: 0;
     margin: 0;
     background-color: #00040f;
+    color: rgb(141, 141, 141);
     font-family: "Poppins", sans-serif;
 
 }
+/* 
+body {
+    max-width: 100%;
+} */
 
 .navbar {
     display: flex;
     align-items: center;
     background-color: transparent;
-    gap: 5rem;
+    /* gap: 5rem; */
+    justify-content: space-evenly;
     overflow: hidden;
-    
+    max-width: 100%;
+
 }
 
 .navbar a {
@@ -24,15 +31,14 @@
     display: block;
     color: #fff;
     text-align: center;
-    padding: 14px 20px;
     text-decoration: none;
     font-size: 17px;
 }
 
-.navbar a:hover {
+/* .navbar a:hover {
     background-color: #ddd;
     color: #000;
-}
+} */
 
 /* Responsive navigation menu */
 .navbar a.icon {
@@ -71,12 +77,20 @@
     }
 }
 
+
 .glassy-background {
     background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url('background-image.jpg');
     background-size: cover;
     backdrop-filter: blur(10px);
-    /* Adjust blur strength as needed */
     font-family: Arial, sans-serif;
+}
+
+.container {
+
+    /* margin-top: 3rem; */
+    /* max-width: 1120px; */
+    /* padding: 1rem 4rem;   */
+    width: 100%;
 }
 
 
@@ -85,4 +99,54 @@
     color: black;
     border: none;
     border-radius: 15px;
+    padding: 0;
+    margin: 0;
+}
+
+
+
+/* -------------------------------- DROPDOWN -------------------------------- */
+/* Dropdown container */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown button */
+.dropbtn {
+    background-color: transparent;
+    color: white;
+    padding: 14px 20px;
+    font-size: 17px;
+    border: none;
+    cursor: pointer;
+    width: 8%;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
 }
