--- a/templates/base.html
+++ b/templates/base.html
@@ -20,27 +20,34 @@
 
     <!-- Navbar -->
     <div class="navbar  " id="navbar">
-        <a href="#"><img width="80rem" src="{% static 'images/finvizer.svg' %}" alt=""></a>
-        <a href="#" class="active">Home</a>
-        <a href="#">FinCalc</a>
+        <a href="{% url 'base:homepage' %}"><img width="80rem" src="{% static 'images/finvizer.svg' %}" alt=""></a>
+        <a href="{% url 'base:homepage' %}" class="active">Home</a>
+        <!-- <a href="{% url 'base:fin_calc' %}">FinCalc</a> -->
+        <select class="dropbtn" onchange="navigateToPage(this.value)">
+            <option value="" disabled selected>FinCalc</option>
+            <option value="{% url 'base:inflation_calc' %}">Inflation Calculator</option>
+            <option value="{% url 'base:investment_calc' %}">Investment Calculator 2</option>
+        </select>
+        <a href="{% url 'base:news' %}">News</a>
         <a href="#">DebtManager</a>
         <a href="#">Saving Sprint</a>
+        <a href="#">Leaderboard</a>
         <a href="javascript:void(0);" class="icon" onclick="toggleNavbar()">
             &#9776;
         </a>
-        <a class="anchor-btn" href="#">Login</a>
+        <a class="anchor-btn" href="{% url 'base:login_page' %}">Login</a>
         <a class="anchor-btn" href="#">Get Started</a>
     </div>
 
     <!-- Content -->
+    {% block content %}
+    {% endblock %}
+    
     <div class="container">
-        {% block content %}
+        {% block body %}
+        
         {% endblock %}
     </div>
-
-    {% block body %}
-
-    {% endblock %}
 
     <!-- ---------------------------- SCRIPT BLOCK ----------------------------- -->
     {% block script %} {% endblock %}
@@ -55,6 +62,14 @@
                 x.className = "navbar";
             }
         }
+    </script>
+    <script>
+        function navigateToPage(url) {
+            if (url) {
+                window.location.href = url;
+            }
+        }
+
     </script>
 </body>
 
