--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,108 @@
 {% extends "base.html" %}
 
+{% load static %}
+
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/base.css' %}">
+<style>
+    .main-index-div {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        /* Set the height of the container to the full viewport height */
+        width: 100%;
+    }
+
+    .first-section {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-end;
+        justify-content: space-around;
+        /* Align items at the bottom of the container */
+    }
+
+    .text {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        background-color: greenyellow;
+        /* Adjust margin as needed */
+    }
+
+
+    .main-div{
+        width: 100%;
+        height: 56rem;
+        background-color: white;
+    }
+</style>
+{% endblock %}
+
+
 {% block body %}
-<p>lorem1323  </p>
-  
+
+
+
+<div class="first-section">
+    <div class="text">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, porro!</p>
+    </div>
+    <div class="first-section-image">
+        <img src="{% static 'images/home_image.svg' %}" alt="">
+    </div>
+</div>
+
+<div class="second-section">
+    <div class="first"></div>
+    <div class="second"></div>  
+</div>
+
+
+
+<!-- 
+
+<div class="main-div">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere culpa sit quia vitae inventore voluptatum numquam ad commodi quod iusto quam eveniet earum nihil quo natus illum molestiae, laborum, optio et corporis? Repellendus, sit placeat eius odit adipisci doloremque totam, beatae fugit, odio aspernatur porro cupiditate corporis numquam neque! Veritatis quo necessitatibus natus quibusdam nobis aspernatur, quaerat ut delectus, placeat provident, illo recusandae in quos cupiditate aliquam reprehenderit est maiores aliquid? Ad iusto voluptatem ducimus quaerat et quae iure laudantium doloribus ex odit, voluptas minus asperiores totam natus, aperiam impedit quis, earum numquam labore doloremque alias? Harum quis enim suscipit nam asperiores voluptate dolorum illo assumenda facere, earum quia ullam facilis laudantium expedita, temporibus fugit sit eaque iusto laborum eligendi, inventore reprehenderit qui dolores vel. Eos odio veritatis voluptatibus voluptatum aperiam ratione quae perferendis sint numquam, sequi rerum culpa aliquid atque nobis hic eveniet voluptate laborum recusandae aut? Inventore quibusdam dolore optio dolores voluptas placeat sequi molestias laboriosam consequuntur quis voluptates neque, veritatis excepturi enim hic omnis ab ad, facilis aperiam facere reiciendis aut molestiae nesciunt corrupti. Sed, voluptate aspernatur tempore explicabo velit a nulla accusantium ab quidem molestias possimus perspiciatis autem eligendi consectetur suscipit et repellendus maiores atque animi.</p>
+</div>
+
+ -->
+
+
+<!-- 
+<div class="content-wrapper">
+    <div class="section">
+        <div class="text">
+            <h2>About Us</h2>
+            <p>Some text about your company.</p>
+        </div>
+        <div class="image">
+            <img src="{% static 'images/home_image.svg' %}" alt="Image">
+        </div>
+    </div>
+    <div class="stats-section">
+        <div class="stat">
+            <h3>Stat 1</h3>
+            <p>1000+</p>
+        </div>
+        <div class="stat">
+            <h3>Stat 2</h3>
+            <p>500+</p>
+        </div>
+        <div class="stat">
+            <h3>Stat 3</h3>
+            <p>200+</p>
+        </div>
+    </div>
+    <div class="section">
+        <div class="text">
+            <h2>Our Services</h2>
+            <p>Some text about the services you offer.</p>
+        </div>
+        <div class="image">
+            <img src="{% static 'images/home_image.svg' %}" alt="Image">
+        </div>
+    </div>
+</div> -->
+
 {% endblock body %}
-
-
-
-
-
