--- a/templates/investment_calc.html
+++ b/templates/investment_calc.html
@@ -9,7 +9,7 @@
 
 {% block body %}
 <div class="calculator">
-    <h2>Investment Calculator</h2>
+    <h2>ROI Calculator</h2>
     <form id="investmentForm">
         <input type="number" id="principal" name="principal" placeholder="Initial Amount" required>
         <input type="number" id="annualInterestRate" name="annualInterestRate" placeholder="Annual Interest Rate(%)"
