--- a/static/css/calc.css
+++ b/static/css/calc.css
@@ -1,14 +1,22 @@
 .calculator {
-    background-color: #fff;
-    padding: 20px;
+    background-color: #130000;
+    /* padding: 20px; */
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
-    width: 100%;
+    /* max-width: 400px; */
+
+    /* width: 100%; */
+    max-width: 30%;
+    position: absolute;
+    top: 35%;
+    left: 35%;
+    transform: translateX(-50%, -50%);
+
 }
 
 h2 {
     text-align: center;
+    color: white;
 }
 
 label {
@@ -16,11 +24,16 @@ label {
 }
 
 input {
-    width: 100%;
+    width: 95%;
     padding: 8px;
     margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    color: white;
+}
+
+input::placeholder{
+    color: white
 }
 
 button {
@@ -43,6 +56,6 @@ button:hover {
     color: white;
 }
 
-#result{
+#result {
     color: white;
 }
