--- a/templates/base.html
+++ b/templates/base.html
@@ -29,11 +29,11 @@
             <option value="{% url 'base:investment_calc' %}">ROI Calc</option>
         </select>
         <a href="{% url 'base:news' %}">News</a>
-        <a href="#">DebtManager</a>
-        <select class="dropbtn" name="saving sprint" id="saving-sprint" class="saving-sprint">
+        <a href="{% url 'base:debt_manager' %}">DebtManager</a>
+        <select class="dropbtn" onchange="navigateToPage(this.value)" name="saving sprint" id="saving-sprint" class="saving-sprint" >
             <option value="" disabled selected>SavingSprint</option>
-            <option value="">Payment Based</option>
-            <option value="">Percentage Based</option>
+            <option value="">Amount Based</option>
+            <option value="{% url 'base:percent_based' %}">Percent Based</option>
         </select>
         <a href="#">Leaderboard</a>
         <a href="javascript:void(0);" class="icon" onclick="toggleNavbar()">
