--- a/templates/contest_form.html
+++ b/templates/contest_form.html
@@ -6,6 +6,7 @@
 {% block body %}
 <form action="" class="contest-form" id="contest-form">
     <input type="text" placeholder="Monthly Income">
+    <input type="text" placeholder="">
 </form>
 {% endblock %}
 
