--- a/templates/percent_contest_form.html
+++ b/templates/percent_contest_form.html
@@ -20,6 +20,11 @@
         <br><br>
         <input type="submit" value="Submit">
     </form>
+
+
+    <a href="{% url 'base:contest_dashboard' %}">DASHBOARD</a>
+
+
     <div id="expected-expenditure"></div>
 </div>
 
