--- a/static/css/contest_dashboard.css
+++ b/static/css/contest_dashboard.css
@@ -134,7 +134,7 @@
     padding-top: 0;
 }
 .chart {
-    background-color: #fff;
+    background-color: black;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
@@ -209,3 +209,9 @@
         height: 40px;
     }
 }
+
+#head1, #head2 {
+    color: whitesmoke;
+}
+
+
