--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,17 @@
             <option value="{% url 'base:investment_calc' %}">ROI Calc</option>
         </select>
         <a href="{% url 'base:news' %}">News</a>
-        <a href="{% url 'base:debt_manager' %}">DebtManager</a>
+        <!-- <a href="{% url 'base:debt_manager' %}">DebtManager</a> -->
+
+
+
+        <select class="dropbtn" onchange="navigateToPage(this.value)" name="DebtManager" id="debtmanager">
+            <option value="" disabled selected>Management Dashboard</option>
+            <option value="{% url 'base:investment_suggestor' %}">Investment Suggestor</option>
+            <option value="{% url 'base:debt_manager' %}">debtmanager</option>
+        </select>
+
+
         <select class="dropbtn" onchange="navigateToPage(this.value)" name="saving sprint" id="saving-sprint"
             class="saving-sprint">
             <option value="" disabled selected>SavingSprint</option>
@@ -39,7 +49,7 @@
         <a href="javascript:void(0);" class="icon" onclick="toggleNavbar()">
             &#9776;
         </a>
-        <a href="{% url 'base:homepage' %}" class="active">Wiser.ai</a>
+        <a href="{% url 'base:vizerai' %}" class="active">Wiser.ai</a>
 
         {% if user.is_authenticated %}
         <a class="anchor-btn" href="{% url 'base:logout_user' %}">{{ request.user.username }}</a>
