--- a/templates/contest_dashboard.html
+++ b/templates/contest_dashboard.html
@@ -50,12 +50,12 @@
         </div>
         <div class="card">
             <div class="card-content">
-<!-- <<<<<<< HEAD
+<!-- <<<<<<< HEAD -->   
                 <div class="number">{{ data.payment_count }}</div>
                 <div class="card-name" style="color: whitesmoke;">Payments</div>
-======= -->
-                <div class="number">42</div>
-                <div class="card-name" style="color: white;">Payments</div>
+<!-- ======= -->
+                <!-- <div class="number">42</div>
+                <div class="card-name" style="color: white;">Payments</div> -->
             </div>
             <div class="icon-box">
                 <i class="fas fa-dollar-sign"></i>
