--- a/templates/contest_dashboard.html
+++ b/templates/contest_dashboard.html
@@ -63,12 +63,10 @@
         </div>
         <div class="card">
             <div class="card-content">
-<!-- <<<<<<< HEAD
                 <div class="number">₹ {{ data.saving }}</div>
                 <div class="card-name" style="color: whitesmoke;">Savings</div>
-======= -->
-                <div class="number">$4500</div>
-                <div class="card-name" style="color: white;">Savings</div>
+                <!-- <div class="number">$4500</div> -->
+                <!-- <div class="card-name" style="color: white;">Savings</div> -->
             </div>
             <div class="icon-box">
 
