Add dynamic features to contest_dashboard - Implement coin jar method

--- a/templates/amount_based.html
+++ b/templates/amount_based.html
@@ -1106,10 +1106,10 @@
                     class="flex flex-col p-6 text-gray-900 bg-gray-50 rounded-lg border border-gray-300 shadow-md dark:border-gray-600 xl:p-8 dark:bg-[#171717] dark:text-white relative">
                     <div class="my-8 flex items-center">
                         <span class="mr-2 text-5xl font-extrabold text-light dark:text-dark">
-                            Sail your savings
+                            Sail your Savings
                             <ul class="mb-8 space-y-4 text-left"></ul>
                             <p class="font-light text-gray-500 sm:text-lg dark:text-gray-400 max-w-[90%]">
-                                Only for boatHeads
+                                Just for boAtHeads
                             </p>
                         </span>
                     </div>
@@ -1157,7 +1157,7 @@
 
                     </div>
                     <p class="font-light text-gray-500 sm:text-lg dark:text-gray-400 max-w-[90%]">
-                        more the expense more the saving
+                        More the expense, More the saving!
                     </p>
                     <ul class="mb-8 space-y-4 text-left"></ul>
                     <!-- ITEM HEADING -->
@@ -1200,7 +1200,7 @@
                             Culinary Coins
                             <ul class="mb-8 space-y-4 text-left"></ul>
                             <p class="font-light text-gray-500 sm:text-lg dark:text-gray-400 max-w-[90%]">
-                                Only if you are a Zomato lover
+                                Just for Zomato lovers!
                             </p>
                         </span>
 
