--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
         <select class="dropbtn" onchange="navigateToPage(this.value)" name="DebtManager" id="debtmanager">
             <option value="" disabled selected>Management Dashboard</option>
             <option value="{% url 'base:investment_suggestor' %}">Investment Suggestor</option>
-            <option value="{% url 'base:debt_manager' %}">debtmanager</option>
+            <option value="{% url 'base:debt_manager' %}">Debt Manager</option>
         </select>
 
 
@@ -49,7 +49,7 @@
         <a href="javascript:void(0);" class="icon" onclick="toggleNavbar()">
             &#9776;
         </a>
-        <a href="{% url 'base:vizerai' %}" class="active">Wiser.ai</a>
+        <a href="{% url 'base:vizerai' %}" class="active">Vizer.ai</a>
 
         {% if user.is_authenticated %}
         <a class="anchor-btn" href="{% url 'base:logout_user' %}">{{ request.user.username }}</a>
